<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".about">
    <ImageView
        android:id="@+id/img_profil"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="70dp"
        android:scaleType="centerCrop"
        android:src="@drawable/photo_1"
        android:contentDescription="@string/foto_profil" />
    <TextView
        android:text="@string/name"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:text="@string/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textAlignment="center"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/instagram"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/nama_instagram"
        android:textSize="16sp" />
</LinearLayout>