<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_photo"
                android:layout_width="match_parent"
                android:layout_height="256dp"
                android:scaleType="centerCrop"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:text="@string/data_name"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16dp"
                android:text="@string/data_description"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/pembuatan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cara Pembuatan"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_description2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16dp"
                android:text="@string/data_description_pembuatan"
                android:textAlignment="center"
                android:textSize="20sp" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>